tests/ui/type/type-check/issue-22897.rs
fn main() { }

fn unconstrained_type() {
    []; //~ ERROR type annotations needed
}

// ferrocene-annotations: fls_xinykul167l
// Array Expressions
// ferrocene-annotations: fls_lv7w7aalpwm5
// Type Inference
